service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: production

spec:
  type: ClusterIP

  selector:
    app: notification-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
