routes-notification-service.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notification-service-route
  namespace: production
spec:
  parentRefs:
    - name: notification-service-gateway
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: notification-service
          port: 80
